Add responsive design.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -92,6 +92,15 @@ nav {
   padding: 0.75rem 0;
 }
 
+/**nav responsive design**/
+.tabletNavOn {
+  display: none;
+}
+
+.tabletNavOff {
+  /**defaults on**/
+}
+
 /**product**/
 #productBox {
   display: flex;
@@ -170,4 +179,119 @@ footer {
   width: 960px;
 }
 
-/**media queries**/
+/**media queries and responsive design**/
+/**tablet size - 1024px**/
+@media only screen and (max-width: 1024px) {
+  /**headline**/
+  h1 {
+    font-size: 1.25rem;
+  }
+
+  h3 {
+    font-size: 0.75rem;
+    font-weight: normal;
+  }
+
+  #headline2 h3 {
+    margin-bottom: 0.5rem;
+  }
+
+  #headline2 {
+    width: 12rem;
+  }
+
+  /**nav**/
+  #nav2 {
+    justify-content: center;
+  }
+
+  /**nav and product**/
+  .tabletDisplayOn {
+    display: block;
+  }
+
+  .tabletDisplayOff {
+    display: none;
+  }
+
+  /**product**/
+  #productBox {
+    width: 100%;
+  }
+
+  .product2 {
+    width: 47%;
+  }
+
+  #infoBox {
+    width: 100%;
+  }
+}
+
+
+/**phone size - 470px**/
+@media only screen and (max-width: 470px) {
+  /**headline**/
+  #headlineBox {
+    height: 15rem;
+  }
+
+  #headline {
+    margin-top: 10rem;
+  }
+
+  #headline2 {
+    width: 100%;
+    padding: 1rem 2rem;
+  }
+
+  h1 {
+    font-size: 1rem;
+  }
+
+  h3 {
+    font-size: 0.77rem;
+  }
+
+  /**product**/
+  .mobileDisplayOff {
+    display: none;
+  }
+
+  #productBox {
+    width: 100%;
+  }
+
+  #product {
+    justify-content: center;
+  }
+
+  .product2 {
+    width: 90%;
+  }
+
+  /**info**/
+  #infoBox {
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .info {
+    width: 100%;
+  }
+
+  .info:nth-of-type(1) {
+    margin-bottom: 0.5rem;
+  }
+
+  /**footer**/
+  footer {
+    padding: 2rem 0;
+  }
+
+  #footer2 {
+    text-align: center;
+  }
+
+}
